fix(client): color too dark with disabled nut

--- a/client/src/assets/rating.less
+++ b/client/src/assets/rating.less
@@ -14,6 +14,7 @@
 
 .nut-disabled{
   background-image: url("nut-disabled.png");
+  opacity: 0.5;
 }
 
 .nut-enabled{
